--- a/lesson7/app/views/customer.html
+++ b/lesson7/app/views/customer.html
@@ -5,11 +5,13 @@ Filter: <input type="text" ng-model="customerFilter.name"/>
         <th ng-click="sortBy='city';reverse=!reverse">City</th>
         <th ng-click="sortBy='orderTotal';reverse=!reverse">OrderTotal</th>
         <th ng-click="sortBy='joined';reverse=!reverse">Joined</th>
+        <th></th>
     </tr>
     <tr ng-repeat="cust in customers | filter:customerFilter | orderBy:sortBy:reverse">
         <td>{{ cust.name | uppercase }}</td>
         <td>{{ cust.city }}</td>
         <td>{{ cust.orderTotal | currency }}</td>
         <td>{{ cust.joined | date:'yyyy-MM-dd' }}</td>
+        <td><a href="#/orders/{{ cust.id }}">View Orders</a></td>
     </tr>
 </table>
